--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -69,6 +69,11 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-	
+		<dependency>
+			<groupId>jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
